Fix overlap issue,fix "nama barang" not showing in Decrementmodal

--- a/src/CSS/Asset.css
+++ b/src/CSS/Asset.css
@@ -956,7 +956,7 @@ modal-overlay {
   border: 1px solid #e2e2e2;
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 10;
+  z-index: 100;
   margin-top: 4px;
 }
 
